<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Senku</string>

    <string name="menu_start">Start Game</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_score">Scores</string>
    <string name="menu_help">How to play</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_facebook">Post on Facebook</string>
    <string name="menu_sound_on">Sound On</string>
    <string name="menu_sound_off">Sound Off</string>
    <string name="menu_game_type">Game type</string>
    <string name="menu_peg_type">Pegs</string>
    <string name="menu_options">Options</string>
    
    <string name="mode_ready">Senku\nPress Up To Play</string>
	<string name="mode_pause">Paused</string>	
	<string name="mode_end2">Press "Menu" and\nselect "Start Game"\nto play again</string>
	<string name="mode_loading">Loading...</string>
	
	<string name="message_stopped">Stopped</string>
	<string name="gameover">Game Over</string>
	<string name="youwin">You Win!</string>
	
	<string name="perfect" >Play: Perfect!!!</string>
	<string name="veryGood">Play: Very Good!</string>
	<string name="good"    >Play: Good</string>
	<string name="regular" >Play: Regular</string>
	<string name="bad"     >Play: Bad</string>
	<string name="remaining_chips">pegs: </string>
	
	<string name="board_name_00">Arrow (very easy)</string>
    <string name="board_name_01">Plus (easy)</string>
    <string name="board_name_02">Home (medium)</string>
    <string name="board_name_03">Pyramid (difficult)</string>
    <string name="board_name_04">Diamond (very difficult)</string>
    <string name="board_name_05">Normal (hard)</string>
    <string name="board_name_06">European death (hardest)</string>
    
    <string name="board_selected">Game selected:</string>
    <string name="peg_selected">Peg selected:</string>
    
    <string name="peg_name_00">Plastic</string>
    <string name="peg_name_01">Wood</string>
    <string name="peg_name_02">Silver</string>
    <string name="peg_name_03">Gold</string>
    <string name="peg_name_04">Sapphire</string>
    <string name="peg_name_05">Emerald</string>
    <string name="peg_name_06">Diamond</string>
    <string name="peg_name_07">Eight ball</string>

     <!-- HighScoreListActivity -->
    <string name="scores_title">High Scores</string>
    <string name="name_header">Date</string>
    <string name="chips_header">Pegs</string>
    <string name="score_header">Score</string>
    <string name="board_header">Game</string>
    <string name="peg_header">Peg</string>
        
    <string name="menu_clear">Reset scores</string>
    <string name="delete_dialog_title">Reset</string>
    <string name="delete_dialog_msg">All scores will be lost.</string>
    <string name="dialog_yes">OK</string>
    <string name="dialog_no">Cancel</string>
    <string name="new_high_score">New high score!</string>
    <string name="dialog_close">Close</string>
	<!--  Help -->
	<string name="help_dialog_title">How to Play</string>
	<string name="help_dialog_msg">The object of the game is to leave only one peg.\n Select a peg that can jump over another to an empty space to "eat" the jumped one.\n\nUse the touchscreen to drag and drop pegs to empty spaces or move across the board using the phone pad and then press the center key of the pad to select a peg. Finally select a direction to "eat" using the phone pad.\nIf you can left just a few pegs (1,2 or 3) in each different board, new pegs will be available for get more score points.</string>

	<string name="score">Score</string>
	<string name="app_facebook_autopost">Facebook Autopost</string>
	<string name="login">Please wait\nwhile the message is sent\nto your facebook wall.</string>
	<string name="new_peg_available">New peg unlocked!</string>
    <string name="senku_layout_text_text"></string>
    <string name="facebook_post_name">Omilen Android Senku</string>
    <string name="facebook_post_description">Senku is simple addictive game for Android Devices, powered by Omilen IT Solutions</string>
    <string name="facebook_post_caption">Senku</string>
    <string name="facebook_please_wait">Please wait...</string>
    <string name="facebook_post_00">Has unlocked a new peg made of </string>
    <string name="facebook_post_01"> for leave only </string>
    <string name="facebook_post_02"> on the board: </string>
	<string name="facebook_post_03">And got</string>
    <string name="facebook_post_04">points.</string>
    <string name="facebook_post_special">unlocked a secret special peg called: eight ball. Which gives 800 score points in each jump</string>
    
    <string name="postOnFacebook_dialog_title">Post on Facebook</string>
    <string name="postOnFacebook_dialog_msg">Enable facebook post?</string>
    <string name="dialogfb_yes">Yes</string>
    <string name="dialogfb_no">No</string>
</resources>