<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<TableLayout
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:selectable="false"
    android:focusable="false"
    android:padding="5dip"
    android:stretchColumns="*">  

    <TableRow>

        <TextView
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:text="@string/name_header"/>

        <TextView
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:text="@string/chips_header"/>
         <TextView
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:text="@string/score_header"/>
          <TextView
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:text="@string/board_header"/>
           <TextView
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:text="@string/peg_header"/>         
    </TableRow>
</TableLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/score_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:listSelector="#00000000"
        android:scrollingCache="false"
        android:divider="#0000"
        android:padding="5dip"/>        
</LinearLayout>
